--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -23,7 +23,7 @@ THIRD.- PROTECTION OF DATA: “BURIED TAPES” will inform Users of the web page
 <p>
 User Collected Information Personal Information. “BURIED TAPES” do not collect Personal Information. “Personal Information” is information that identifies you or another person, such as your first name and last name, physical addresses, email addresses, telephone, fax, SSN, information stored within your device. “BURIED TAPES” games does not collect precise information about the location of your mobile device.
 <p>
-Non-personal Information. “(BURIED TAPES) The Cleaner” collect your non-personal information when you visit our website, including your device information, operation system, logs. For example, as many websites, we may use “cookies” to obtain the above information when your web browser accesses invertedaxis.com.
+Non-personal Information. “(BURIED TAPES) The Cleaner” collect your non-personal information when you visit our website, including your device information, operation system, logs. For example, as many websites, we may use “cookies” to obtain the above information when your web browser accesses.
 <p>
 Information you provide. We may collect your information when you communicate with us or you give us.
 <p>
